# android-mcp-server

./: .gitignore  Dockerfile  README.md  adbdevicemanager.py  config.yaml  config.yaml.example  pyproject.toml  run_tests.py  server.py  test.py
tests/: __init__.py  test_adb_device_manager.py  test_config.py  test_integration.py
